--- a/ecommerceBackend/src/main/resources/application.properties
+++ b/ecommerceBackend/src/main/resources/application.properties
@@ -2,9 +2,9 @@ spring.application.name=Insurance_Backend
 
 server.port=8083
 
-spring.datasource.url=jdbc:mysql://localhost:3306/ecommerce_multivendor
-spring.datasource.username=root
-spring.datasource.password=harshavardhan@19862005
+spring.datasource.url=${DB_URL}
+spring.datasource.username=${DB_USERNAME}
+spring.datasource.password=${DB_PASSWORD}
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 spring.jpa.hibernate.ddl-auto=update
@@ -12,7 +12,7 @@ spring.jpa.show-sql=true
 
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
-spring.mail.username=harshaupputuri123@gmail.com
-spring.mail.password=bynu djhz twst anmk
+spring.mail.username=${MAIL_USERNAME}
+spring.mail.password=${MAIL_PASSWORD}
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
