--- a/ecommerceBackend/src/main/resources/application.properties
+++ b/ecommerceBackend/src/main/resources/application.properties
@@ -16,3 +16,7 @@ spring.mail.username=${MAIL_USERNAME}
 spring.mail.password=${MAIL_PASSWORD}
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
+
+RAZORPAY_KEY=${RAZORPAY_KEY}
+RAZORPAY_SECRET=${RAZORPAY_SECRET}
+STRIPE_SECRET=${STRIPE_SECRET}
